--- a/random_fourier_features.ipynb
+++ b/random_fourier_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "651e2f25",
+   "id": "daa39e20",
    "metadata": {},
    "source": [
     "# Classifying MNIST using random fourier features"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74df027c",
+   "id": "3fc0666e",
    "metadata": {},
    "source": [
     "We want to solve \n",
@@ -20,14 +20,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e72ad8c",
+   "id": "eae12581",
    "metadata": {},
    "source": [
     "We formulate the function as \n",
     "\n",
     "$$f_\\theta(x;\\theta) = \\begin{bmatrix}\\sum_{k=1}^K \\theta_i^{(1)}s(\\omega_k \\cdot x) & \\sum_{k=1}^K \\theta_i^{(2)}s(\\omega_k \\cdot x) & \\dots & \\sum_{k=1}^K \\theta_i^{(10)}s(\\omega_k \\cdot x) \\end{bmatrix}^T \\in \\mathbb{C}^{10}$$\n",
     "\n",
-    "where $K$ is the number of \"nodes\" in the network and $s(x) = e^{ix}$. If we instead write this using matrix notation we get\n",
+    "where $K$ is the number of \"nodes\" in the network and $s(x) = e^{ix}$.\n",
+    "The vector $\\omega_k$ is drawn from a normal distribution with mean zero and variance $\\sigma^2$. If we instead write this using matrix notation we get\n",
     "\n",
     "$$f_\\theta(x;\\theta) = \\begin{bmatrix} \n",
     "\\theta_1^{(1)} & \\theta_2^{(1)} & \\dots & \\theta_K^{(1)} \\\\ \n",
@@ -50,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e18f50ac",
+   "id": "1071bf06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fec8d33c",
+   "id": "81a3cca7",
    "metadata": {},
    "source": [
     "Define parameters and the activation function plus a mapping from label to one-hot vectors. "
@@ -69,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "11b3b6d1",
+   "id": "866cf0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a67d65a6",
+   "id": "177f1f6b",
    "metadata": {},
    "source": [
     "Import the mnist data set and reshape and convert to one-hot. "
@@ -95,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "4d039ce9",
+   "id": "885d51ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0e4336e2",
+   "id": "2218b933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c45dcb",
+   "id": "b27d2f4b",
    "metadata": {},
    "source": [
     "Calculate the $S$ matrix from the training and test set"
@@ -130,19 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "63409f98",
+   "execution_count": 74,
+   "id": "06ef1204",
    "metadata": {},
    "outputs": [],
    "source": [
-    "omega = np.random.normal(0,sigma,(M,K))\n",
-    "S = s(np.dot(X, omega)).T\n",
-    "S_test = s(np.dot(test_X, omega)).T"
+    "w = np.random.normal(0,sigma,(M,K))\n",
+    "S = s(np.dot(X, w)).T\n",
+    "S_test = s(np.dot(test_X, w)).T"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20f10fbc",
+   "id": "1e1bf3a4",
    "metadata": {},
    "source": [
     "Solve least squares problem with numpy. You could probably do this with some built in function."
@@ -150,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "84dfbc62",
+   "execution_count": 75,
+   "id": "180a844d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ac8fb77",
+   "id": "2ad0c8ba",
    "metadata": {},
    "source": [
     "Now we can use $\\Theta$ to make predictions by calulating $\\Theta S$ and taking taking $max(Re(\\Theta S))$ as the prediction"
@@ -168,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "9f5d1724",
+   "execution_count": 76,
+   "id": "79b7834b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,16 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "22d28c57",
+   "execution_count": 77,
+   "id": "0cf7c832",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correctly predicted samples on the training set:  0.9776\n",
-      "Correctly predicted samples on the test set:  0.9685\n"
+      "Correctly predicted samples on the training set:  0.97734\n",
+      "Correctly predicted samples on the test set:  0.9689\n"
      ]
     }
    ],
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "159fd471",
+   "id": "cf886bac",
    "metadata": {},
    "source": [
     "The results are not amazing, but still about 97% out-of-sample accuracy with a linear system which can be solved analytically and easily computed numerically. We could probably improve by finding the optimal frequencies or searching the the optimal distribution of frequencies. "
