--- a/random_fourier_features.ipynb
+++ b/random_fourier_features.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "We want to solve \n",
     "$$\\min_{\\theta}\\mathbb{E}[y(X)- f(X;\\theta)] + \\lambda\\vert\\vert\\theta\\vert\\vert$$\n",
-    "where $X$ is a handwritten digit and $y(X)$ is a one-hot vector containing the correct label. This problem has been approach with many different techniques and perhaps with highest precision when using CNNs. In this notebook we will formulate a \"neural network\" but with complex activation functions such that we are searching for the complex parameters $\\theta \\in \\mathbf{C}^{10\\times K}$."
+    "where $X$ is a handwritten digit and $y(X)$ is a one-hot vector containing the correct label. This problem has been approached with many different techniques and perhaps with highest precision when using CNNs. In this notebook we will formulate a \"neural network\" but with complex activation functions such that we are searching for the complex parameters $\\theta \\in \\mathbf{C}^{10\\times K}$."
    ]
   },
   {
@@ -36,9 +36,9 @@
     "\\vdots & \\vdots  &  & \\vdots \\\\ \n",
     "\\theta_1^{(10)} & \\theta_2^{(10)} & \\dots & \\theta_K^{(10)} \\\\ \n",
     "\\end{bmatrix}  \\begin{bmatrix} s(\\omega_1 \\cdot x) \\\\ s(\\omega_2 \\cdot x) \\\\\\vdots \\\\ s(\\omega_K \\cdot x)\n",
-    "\\end{bmatrix} = \\Theta S $$\n",
+    "\\end{bmatrix} = \\Theta S, $$\n",
     "\n",
-    "Then we have the system we want to solve the least squares problem \n",
+    "and we obtain a linear system. From this we want to solve the least squares problem \n",
     "$$\\min_\\Theta \\vert\\vert y(X) - \\Theta S \\vert\\vert_2^2 + \\lambda \\vert\\vert \\Theta \\vert \\vert$$\n",
     "\n",
     "which has the solution\n",
@@ -205,8 +205,16 @@
    "id": "cf886bac",
    "metadata": {},
    "source": [
-    "The results are not amazing, but still about 97% out-of-sample accuracy with a linear system which can be solved analytically and easily computed numerically. We could probably improve by finding the optimal frequencies or searching the the optimal distribution of frequencies. "
+    "The results are not amazing, but still about 97% out-of-sample accuracy with a linear system which can be solved analytically and easily computed numerically. We could probably improve by finding the optimal frequencies or searching for the optimal distribution of frequencies. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b050b051",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
